<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/choosetitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/edit_filename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/filename_hint"
            android:singleLine="true"
            android:ellipsize="none" >
        </EditText>

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok_title" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_path"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="2dip"
        android:paddingRight="2dip"
        android:ellipsize="start"
        android:text="" />

    <ListView
        android:id="@+id/list_file"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </ListView>

</LinearLayout>